Fix text overflow

--- a/limo-shop-app/src/common/components/Button/button.module.scss
+++ b/limo-shop-app/src/common/components/Button/button.module.scss
@@ -1,4 +1,5 @@
 @use "../../../styles/variables/index" as *;
+@use "../../../styles/abstracts/index" as *;
 
 .button {
   font-family: inherit;
@@ -12,11 +13,6 @@
   cursor: pointer;
 
   &:hover {
-    background-color: $color-primary-1;
-    transition: all 0.3s;
+    @include hover-dark;
   }
 }
-
-// .padding-s {
-//   padding: $spacing-xxxxs $spacing-xxs $spacing-xxxxs $spacing-xxs;
-// }
