--- a/limo-shop-app/src/styles/abstracts/_mixins.scss
+++ b/limo-shop-app/src/styles/abstracts/_mixins.scss
@@ -10,3 +10,9 @@
   position: absolute;
   z-index: 4;
 }
+
+@mixin hover-dark {
+  background-color: $color-primary-3;
+  color: $color-primary-1;
+  transition: all 0.3s;
+}
